# IEFMMQ

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  READMEZH.md  codecov.yml  config.py  help_flow.md  help_flow_en.md  knowledge_source_policy.yaml  live_dcs.py  model_access.md  pyproject.toml
.github/: pull_request_template.md
Doc/: current_button_definition.md
adapters/: __init__.py  action_executor.py  base_help_model.py  dcs_adapter.py  delta_aggregator.py  delta_sanitizer.py  evidence_refs.py  help_response_parser.py  json_extract.py  knowledge_local.py  knowledge_source_policy.py  mock_env.py  model_stub.py  ollama_model.py  openai_compat_model.py  openai_compat_multimodal.py  pack_gates.py  prompting.py  recent_actions.py  response_mapping.py  source_chunk_refs.py  step_inference.py  telemetry_pipeline.py  vision_capture_trigger.py  vision_fact_extractor.py  vision_fact_prompting.py  vision_frames.py  vision_prompting.py  vision_sync.py  windows_global_help_trigger.py
artifacts/: correct_process.jsonl  dcs_bios_frame_once.json  missing_steps.jsonl  premature_acceleration.jsonl  results.csv
core/: __init__.py  constants.py  env_bool.py  event_store.py  gating.py  help_cycle_audit.py  help_failure.py  interaction_metrics.py  knowledge.py  llm_schema.py  overlay.py  procedure.py  scoring.py  security.py  step_hint.py  step_registry.py  step_signal_metadata.py  types.py  types_v2.py  vars.py  vision_facts.py
logs/: dcs_bios_raw_15s.jsonl  test_good.jsonl  test_missing.jsonl  test_prem.jsonl  test_run.jsonl
mock_scenarios/: missing_steps.json  (+2 more)
(+405 files in other folders)
